[CHI-218] Fix misaligned header content in IE11 - fix bug with header with toolbar

--- a/src/chi/components/header/header.scss
+++ b/src/chi/components/header/header.scss
@@ -228,7 +228,7 @@
 /* IE11 CSS hack */
 @media all and (-ms-high-contrast:none) {
   .chi {
-    .o-header {
+    .o-header__content, .o-header__toolbar ~ .o-header__content {
       height: 4rem;
     }
   }
